<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="#17232f"
        android:id="@+id/createAccount">

    <LinearLayout
            android:orientation="vertical"
            android:layout_height="400dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="20dp" android:background="#17232f"
            android:padding="50dp" android:layout_width="match_parent" tools:layout_editor_absoluteY="98dp"
            tools:layout_editor_absoluteX="20dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="232dp"
                android:layout_height="wrap_content" android:layout_weight="0" android:padding="20dp">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/logo" android:id="@+id/imageView2"
                    android:layout_weight="1" android:contentDescription="@string/logo"/>
            <TextView
                    android:text="@string/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textColor="#FFFFFF"
                    android:textSize="34sp" android:lineSpacingExtra="8sp" android:textStyle="bold"
            />
        </LinearLayout>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="15"
                android:id="@+id/signUpEmailField" android:hint="@string/email"
                android:maxLines="1" android:digits="1234567890abcdefghijklmnopqrstuvwxyz_-.@" android:background="#fffcc8" android:gravity="center"
                android:layout_weight="0" android:layout_gravity="center" android:minHeight="48dp"
                android:autofillHints="@string/email"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="15"
                android:id="@+id/signUpPasswordField"
                android:hint="@string/password"
                android:maxLines="1" android:digits="1234567890abcdefghijklmnopqrstuvwxyz_-.@"
                android:background="#fffcc8" android:layout_gravity="center"
                android:gravity="center" android:layout_weight="0" android:minHeight="48dp" android:autofillHints=""/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" android:digits="1234567890abcdefghijklmnopqrstuvwxyz_-.@"
                android:ems="10"
                android:id="@+id/confirmPasswordField" android:layout_weight="0" android:background="#fffcc8"
                android:hint="@string/confirm_password" android:gravity="center" android:minHeight="48dp"
                android:autofillHints="@string/password"/>
        <Button
                android:text="@string/create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/createAccountButton" android:layout_weight="0"
                android:backgroundTint="#4488dd " android:minHeight="48dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>